--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/indika-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="_kG-XxyPMXfxMwAQb-yU-6BE4vs7ccMZoq5q89UaENY"
+    />
     <title>Indika - Conecte-se com profissionais da sua vizinhança</title>
     <meta
       name="description"
